fix experience layout on mobile devices again

--- a/src/components/experience/experience.css
+++ b/src/components/experience/experience.css
@@ -79,7 +79,7 @@
     }
 
     .experience__content {
-        margin-left: 1rem;
+        margin-left: 0.8rem;
     }
     .experience__details {
         display: flex;
